--- a/app/views/submission_details/show.html.erb
+++ b/app/views/submission_details/show.html.erb
@@ -6,6 +6,8 @@
 
 <% if @submission_detail.submission.category.submission_file_type == "URL Link Only" || @submission_detail.submission.category.submission_file_type == "Video Only" %>
   <p><%= link_to 'Submission Link', @submission_detail.file_url, target: "_blank" %></p>
+<% elsif @submission_detail.submission.category.submission_file_type == "App Name" %>
+  <p><%= @submission_detail.file_url %></p>
 <% else %>
   <p><%= link_to image_tag(@submission_detail.attachment.url(:thumb)), @submission_detail.attachment.url(:original), target: "_blank" %></p>
 <% end %>
