--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>IAFE Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
   <meta name="description" content="The IAFE annually awards excellence in fair programming through four educational contests: Agriculture, Competitive Exhibits, Communications, and Sponsorship."/>
   <link rel="icon" href="/images/template/favicon.ico" type="image/x-icon">
   <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Lobster" %>
