--- a/app/views/static_pages/instructions.html.erb
+++ b/app/views/static_pages/instructions.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class='col-md-4'>
 			<h3>1. Sign In or Create a New User Account</h3>
-			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="bold italic">Your login information for this site is not connected to your www.fairsandexpos.com login (though it can be the same if you input the same username and password when you create an account).</span></p>
+			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="bold italic">Your login information for this site is not connected to your www.fairsandexpos.com login (though it can be the same if you input the same e-mail and password when you create an account).</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>2. Link Your Organization to Your User Account</h3>
@@ -21,11 +21,19 @@
 		</div>
 		<div class='col-md-4'>
 			<h3>5. Assign Documents to the Submission</h3>
-			<p>Next, you will be redirected to upload a document to the submission you just created, which could be a PDF essay (the most common), a photo, a video, or a web link. Once saved, you may return to the "My Submissions" page to add another document to the same entry. Be sure to thoroughly read rules for the contest(s) your will enter in order to upload the proper type and size of documents <span class="bold italic">Caution: filesize limits exist.</span></p>
+			<p>Next, you will be redirected to upload a document to the submission you just created, which could be a PDF essay (the most common), a photo, a video, or a web link. Once saved, you may add another document to the same entry. Be sure to thoroughly read the rules for each contest in order to upload the proper type and size of documents. <span class="bold italic">Caution: filesize limits exist.</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>6. Mail (if Applicable) and Monitor Your Submissions</h3>
 			<p>Certain categories also require that you mail a physical entry to the IAFE office. Please read the rules carefully and ensure that the IAFE office will receive your entry before the deadline. You can use the "My Submissions" page to view which categories you entered and to monitor the status of your submission!</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<h3>View the Introductory Video to Get Started</h3>
+			<div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
+  				<iframe src="//www.youtube.com/embed/m-om7KIyPbQ?wmode=transparent&rel=0" autoplay="false" allowfullscreen></iframe>
+  			</div>
 		</div>
 	</div>
 </div>
