--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -12,7 +12,7 @@
         <div class="col-md-4">
           <p><%= submission.organization.name %>, <%= submission.organization.state_province %></p>
           <% if submission.scores.count == 0 %>
-            <p><%= link_to 'Score This Entry', new_submission_score_path(submission) %></p>
+            <p><%= link_to 'Score/View This Entry', new_submission_score_path(submission) %></p>
           <% else %>
             <% submission.scores.each do |s| %>
               <% if s.user_id == current_user.id %>
@@ -21,13 +21,13 @@
                 <p>Did you disqualify this entry? <span class="bold"><%= s.disqualify %></span></p>
                 <p><%= link_to 'View Entry', edit_submission_score_path(submission_id: s.submission_id, id: s.id) %></p>
               <% else %>
-                <p><%= link_to 'Score This Entry', new_submission_score_path(submission) %></p>
+                <p><%= link_to 'Score/View This Entry', new_submission_score_path(submission) %></p>
               <% end %>
             <% end %>
           <% end %>
         </div>
       <% end %>
-    </div><br/>
+    </div><hr/><br/>
   <% end %>
 <% end %>
 
