--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -48,7 +48,7 @@
     <%= f.text_field :phone %>
   </div>
   <div class="field">
-    <%= f.label :fair, "Is this a fair?" %> <span class="required">*</span><br>
+    <%= f.label :fair, "Is this a fair or state/provincial association?" %> <span class="required">*</span><br>
     <%= f.check_box :fair, {checked: "checked"}  %>
   </div>
   <div class="field">
