--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -64,9 +64,6 @@
   </div>
   <p class="italic">Note: if you choose to disqualify, the IAFE will e-mail all judges of this category to gain a consensus</p>
   <div class="actions">
-  	<% if params[:action] == 'new' || params[:action] == 'create' %>
-      <% if @submission.scores.where(user_id: current_user.id).count == 0 %><p><%= f.submit %></p>
-      <% else %><p class="important">You have already scored this entry.</p><% end %>
-    <% else %><p class="important">You have already scored this entry.</p><% end %>
+  	<p><%= f.submit %></p>
   </div>
 <% end %>
