--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
         <p><strong>Country:</strong> <%= user_organization.organization.country %></p>
         <p><strong>Zip Code:</strong> <%= user_organization.organization.zip_code %></p>
         <p><strong>Phone:</strong> <%= user_organization.organization.phone %></p>
-        <p><strong>Is This a Fair?</strong> <%= user_organization.organization.fair? %></p>
+        <p><strong>Is This a Fair or State/Provincial Association?</strong> <%= user_organization.organization.fair? %></p>
         <p><strong>Is This Your Primary Org?</strong> <%= user_organization.primary? %></p>
         <% if user_organization.organization.enabled == false %><p class="important">Note: This organization has been disabled for contest submission, possibly because its IAFE membership has lapsed or it is no longer in existence. Contact the IAFE office to re-enable.</p><% end %>
         <p><%= link_to "Edit Organization".html_safe, 
