--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="field">
     <p><span class="bold">Total Attendance <span class="italic">FROM THE PREVIOUS YEAR (<%= Time.now.year - 1 %>)</span> (Free & Paid Combined) <span class="required">*</span></span><br>
-    <span class="italic">Please enter in a whole number with no commas.</span><br>
+    <span class="italic">Please enter in a whole number with <span class="important">no commas.</span></span><br>
     <%= f.text_field :total_attendance %></p>
   </div>
   <div class="actions"><br/>
