--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -56,6 +56,7 @@
   </div>
   <div class="field">
     <%= f.label :comments %><br>
+    <span class="italic">1000 character-limit maximum</span><br>
     <%= f.text_area :comments, size: "30x10" %>
   </div>
   <div class="field">
