--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,3 +1,16 @@
+<script type="text/javascript">
+function toCount(entrance,exit,text,characters) {  
+    var entranceObj=document.getElementById(entrance);  
+      var exitObj=document.getElementById(exit);  
+      var length=characters - entranceObj.value.length;  
+      if(length <= 0) {  
+        length=0;   
+        entranceObj.value=entranceObj.value.substr(0,characters);  
+      }  
+      exitObj.innerHTML = text.replace("[x]",length);  
+    }
+</script>
+
 <%= form_for([@submission, @score], html: {multipart: true}) do |f| %>
   <% if @score.errors.any? %>
     <div id="error_explanation">
@@ -57,7 +70,8 @@
   <div class="field">
     <%= f.label :comments %><br>
     <span class="italic">1000 character-limit maximum</span><br>
-    <%= f.text_area :comments, size: "30x10" %>
+    <%= f.text_area :comments, size: "30x10", style: "overflow-x: hidden;", value: "", type: "text", id="inputarea", maxlength:"1000", onKeyUp: "toCount('inputarea','calculation','[x] characters remaining',1000);" %>  
+    <p id="calculation">1000 characters remaining</p> 
   </div>
   <div class="field">
     <%= f.label :disqualify, "Disqualify?" %><br>
