--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <img src="/images/template/logo.png" class="logo" width="350" height="204"/>
+      	<p style="text-align: center;"><img src="/images/template/contest_cover.jpg" style="max-width:100%;"></p>
+        <!--<img src="/images/template/logo.png" class="logo" width="350" height="204"/>-->
         <p>Each year, the IAFE conducts contests for its fair members, which recognize and reward excellence. All contests are judged by IAFE member representatives and professionals from respective fields.</p>
         <div class="icons right">
           <a href="https://www.facebook.com/pages/IAFE-The-Network/87203559642?ref=nf" target="_blank"><img src="/images/template/facebook.png" class="social" width="42" height="32"/></a>
